// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mobile BasicLayout > 📱 base use 1`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-xs ant-pro-layout-fix-siderbar ant-pro-layout-side"
  >
    <div
      class="ant-pro-layout-bg-list"
    />
    <div
      class="ant-layout"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-global-header"
          >
            <span
              class="ant-pro-global-header-collapsed-button"
            >
              <span
                aria-label="menu"
                class="anticon anticon-menu"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="menu"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-pro-global-header-logo ant-pro-global-header-logo-mobile"
            >
              <a>
                <svg
                  height="1em"
                  viewBox="0 0 200 200"
                  width="1em"
                >
                  <defs>
                    <lineargradient
                      id="linearGradient-1"
                      x1="62.1023273%"
                      x2="108.19718%"
                      y1="0%"
                      y2="37.8635764%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#4285EB"
                      />
                      <stop
                        offset="100%"
                        stop-color="#2EC7FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-2"
                      x1="69.644116%"
                      x2="54.0428975%"
                      y1="0%"
                      y2="108.456714%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#29CDFF"
                      />
                      <stop
                        offset="37.8600687%"
                        stop-color="#148EFF"
                      />
                      <stop
                        offset="100%"
                        stop-color="#0A60FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-3"
                      x1="69.6908165%"
                      x2="16.7228981%"
                      y1="-12.9743587%"
                      y2="117.391248%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA816E"
                      />
                      <stop
                        offset="41.472606%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-4"
                      x1="68.1279872%"
                      x2="30.4400914%"
                      y1="-35.6905737%"
                      y2="114.942679%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA8E7D"
                      />
                      <stop
                        offset="51.2635191%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                  </defs>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      transform="translate(-20.000000, -20.000000)"
                    >
                      <g
                        transform="translate(20.000000, 20.000000)"
                      >
                        <g>
                          <g
                            fill-rule="nonzero"
                          >
                            <g>
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C99.2571609,26.9692191 101.032305,26.9692191 102.20193,28.1378823 L129.985225,55.8983314 C134.193707,60.1033528 141.017005,60.1033528 145.225487,55.8983314 C149.433969,51.69331 149.433969,44.8756232 145.225487,40.6706018 L108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-1)"
                              />
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C100.999864,25.6271836 105.751642,20.541824 112.729652,19.3524487 C117.915585,18.4685261 123.585219,20.4140239 129.738554,25.1889424 C125.624663,21.0784292 118.571995,14.0340304 108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-2)"
                              />
                            </g>
                            <path
                              d="M153.685633,135.854579 C157.894115,140.0596 164.717412,140.0596 168.925894,135.854579 L195.959977,108.842726 C200.659183,104.147384 200.659183,96.5636133 195.960527,91.8688194 L168.690777,64.7181159 C164.472332,60.5180858 157.646868,60.5241425 153.435895,64.7316526 C149.227413,68.936674 149.227413,75.7543607 153.435895,79.9593821 L171.854035,98.3623765 C173.02366,99.5310396 173.02366,101.304724 171.854035,102.473387 L153.685633,120.626849 C149.47715,124.83187 149.47715,131.649557 153.685633,135.854579 Z"
                              fill="url(#linearGradient-3)"
                            />
                          </g>
                          <ellipse
                            cx="100.519339"
                            cy="100.436681"
                            fill="url(#linearGradient-4)"
                            rx="23.6001926"
                            ry="23.580786"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </a>
            </span>
            <div
              style="flex: 1;"
            />
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header"
        >
          welcome
        </main>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mobile BasicLayout > 📱 collapsed=false 1`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-xs ant-pro-layout-fix-siderbar ant-pro-layout-side"
  >
    <div
      class="ant-pro-layout-bg-list"
    />
    <div
      class="ant-layout ant-layout-has-sider"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-drawer ant-drawer-left ant-drawer-open ant-drawer-inline"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          aria-hidden="true"
          data-sentinel="start"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="width: 256px;"
        >
          <div
            aria-modal="true"
            class="ant-drawer-content ant-pro-drawer-sider"
            role="dialog"
            style="padding: 0px; height: 100vh;"
          >
            <div
              class="ant-drawer-body"
              style="height: 100vh; padding: 0px; display: flex; flex-direction: row; background-color: transparent;"
            >
              <aside
                class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-fixed ant-pro-sider-light"
                style="flex: 0 0 256px; max-width: 256px; min-width: 256px; width: 256px;"
              >
                <div
                  class="ant-layout-sider-children"
                >
                  <div
                    style="flex: 1; overflow-y: auto; overflow-x: hidden;"
                  >
                    <ul
                      class="ant-menu ant-menu-root ant-menu-inline ant-menu-light ant-pro-sider-menu ant-pro-base-menu-inline"
                      data-menu-list="true"
                      role="menu"
                      style="background-color: transparent; width: 100%;"
                      tabindex="0"
                    >
                      <li
                        class="ant-menu-submenu ant-menu-submenu-inline ant-pro-base-menu-inline-submenu ant-menu-submenu-open ant-menu-submenu-selected"
                        role="none"
                      >
                        <div
                          aria-controls="rc-menu-uuid-84044-1-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46-popup"
                          aria-expanded="true"
                          aria-haspopup="true"
                          class="ant-menu-submenu-title"
                          data-menu-id="rc-menu-uuid-84044-1-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46"
                          role="menuitem"
                          style="padding-left: 16px;"
                          tabindex="-1"
                        >
                          <span
                            class="ant-menu-title-content"
                          >
                            <div
                              class="ant-pro-base-menu-inline-item-title"
                            >
                              <span
                                class="ant-pro-base-menu-inline-item-text"
                              >
                                welcome
                              </span>
                            </div>
                          </span>
                          <i
                            class="ant-menu-submenu-arrow"
                          />
                        </div>
                        <ul
                          class="ant-menu ant-menu-sub ant-menu-inline"
                          data-menu-list="true"
                          id="rc-menu-uuid-84044-1-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46-popup"
                          role="menu"
                        >
                          <li
                            class="ant-menu-submenu ant-menu-submenu-inline ant-pro-base-menu-inline-submenu"
                            role="none"
                          >
                            <div
                              aria-controls="rc-menu-uuid-84044-1-/welcome-popup"
                              aria-expanded="false"
                              aria-haspopup="true"
                              class="ant-menu-submenu-title"
                              data-menu-id="rc-menu-uuid-84044-1-/welcome"
                              role="menuitem"
                              style="padding-left: 32px;"
                              tabindex="-1"
                            >
                              <span
                                class="ant-menu-title-content"
                              >
                                <div
                                  class="ant-pro-base-menu-inline-item-title"
                                >
                                  <span
                                    class="ant-pro-base-menu-inline-item-text"
                                  >
                                    one
                                  </span>
                                </div>
                              </span>
                              <i
                                class="ant-menu-submenu-arrow"
                              />
                            </div>
                          </li>
                        </ul>
                      </li>
                    </ul>
                    <div
                      aria-hidden="true"
                      style="display: none;"
                    />
                  </div>
                  <div
                    class="ant-pro-sider-collapsed-button ant-pro-sider-collapsed-button-is-mobile"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 12 12"
                      width="1em"
                    >
                      <path
                        d="M6.432 7.967a.448.448 0 01-.318.133h-.228a.46.46 0 01-.318-.133L2.488 4.85a.305.305 0 010-.43l.427-.43a.293.293 0 01.42 0L6 6.687l2.665-2.699a.299.299 0 01.426 0l.42.431a.305.305 0 010 .43L6.432 7.967z"
                      />
                    </svg>
                  </div>
                </div>
              </aside>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          data-sentinel="end"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
      </div>
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header-action ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-global-header"
          >
            <span
              class="ant-pro-global-header-collapsed-button"
            >
              <span
                aria-label="menu"
                class="anticon anticon-menu"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="menu"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-pro-global-header-logo ant-pro-global-header-logo-mobile"
            >
              <a>
                <svg
                  height="1em"
                  viewBox="0 0 200 200"
                  width="1em"
                >
                  <defs>
                    <lineargradient
                      id="linearGradient-1"
                      x1="62.1023273%"
                      x2="108.19718%"
                      y1="0%"
                      y2="37.8635764%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#4285EB"
                      />
                      <stop
                        offset="100%"
                        stop-color="#2EC7FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-2"
                      x1="69.644116%"
                      x2="54.0428975%"
                      y1="0%"
                      y2="108.456714%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#29CDFF"
                      />
                      <stop
                        offset="37.8600687%"
                        stop-color="#148EFF"
                      />
                      <stop
                        offset="100%"
                        stop-color="#0A60FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-3"
                      x1="69.6908165%"
                      x2="16.7228981%"
                      y1="-12.9743587%"
                      y2="117.391248%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA816E"
                      />
                      <stop
                        offset="41.472606%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-4"
                      x1="68.1279872%"
                      x2="30.4400914%"
                      y1="-35.6905737%"
                      y2="114.942679%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA8E7D"
                      />
                      <stop
                        offset="51.2635191%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                  </defs>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      transform="translate(-20.000000, -20.000000)"
                    >
                      <g
                        transform="translate(20.000000, 20.000000)"
                      >
                        <g>
                          <g
                            fill-rule="nonzero"
                          >
                            <g>
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C99.2571609,26.9692191 101.032305,26.9692191 102.20193,28.1378823 L129.985225,55.8983314 C134.193707,60.1033528 141.017005,60.1033528 145.225487,55.8983314 C149.433969,51.69331 149.433969,44.8756232 145.225487,40.6706018 L108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-1)"
                              />
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C100.999864,25.6271836 105.751642,20.541824 112.729652,19.3524487 C117.915585,18.4685261 123.585219,20.4140239 129.738554,25.1889424 C125.624663,21.0784292 118.571995,14.0340304 108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-2)"
                              />
                            </g>
                            <path
                              d="M153.685633,135.854579 C157.894115,140.0596 164.717412,140.0596 168.925894,135.854579 L195.959977,108.842726 C200.659183,104.147384 200.659183,96.5636133 195.960527,91.8688194 L168.690777,64.7181159 C164.472332,60.5180858 157.646868,60.5241425 153.435895,64.7316526 C149.227413,68.936674 149.227413,75.7543607 153.435895,79.9593821 L171.854035,98.3623765 C173.02366,99.5310396 173.02366,101.304724 171.854035,102.473387 L153.685633,120.626849 C149.47715,124.83187 149.47715,131.649557 153.685633,135.854579 Z"
                              fill="url(#linearGradient-3)"
                            />
                          </g>
                          <ellipse
                            cx="100.519339"
                            cy="100.436681"
                            fill="url(#linearGradient-4)"
                            rx="23.6001926"
                            ry="23.580786"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </a>
            </span>
            <div
              style="flex: 1;"
            />
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mobile BasicLayout > 📱 layout menuHeaderRender 1`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-xs ant-pro-layout-fix-siderbar ant-pro-layout-mix"
  >
    <div
      class="ant-pro-layout-bg-list"
    />
    <div
      class="ant-layout"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header"
          style="height: 56px; line-height: 56px; background-color: transparent; z-index: 19;"
        />
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header ant-pro-layout-header-mix ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-global-header"
          >
            <span
              class="ant-pro-global-header-collapsed-button"
            >
              <span
                aria-label="menu"
                class="anticon anticon-menu"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="menu"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            title
            <div
              style="flex: 1;"
            />
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header"
        >
          welcome
        </main>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mobile BasicLayout > 📱 layout menuHeaderRender 2`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-xs ant-pro-layout-fix-siderbar ant-pro-layout-mix"
  >
    <div
      class="ant-pro-layout-bg-list"
    />
    <div
      class="ant-layout"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header"
          style="height: 56px; line-height: 56px; background-color: transparent; z-index: 19;"
        />
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header ant-pro-layout-header-mix ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-global-header"
          >
            <span
              class="ant-pro-global-header-collapsed-button"
            >
              <span
                aria-label="menu"
                class="anticon anticon-menu"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="menu"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            title
            <div
              style="flex: 1;"
            />
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header"
        >
          welcome
        </main>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mobile BasicLayout > 📱 layout menuHeaderRender=false 1`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-xs ant-pro-layout-fix-siderbar ant-pro-layout-mix"
  >
    <div
      class="ant-pro-layout-bg-list"
    />
    <div
      class="ant-layout"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header"
          style="height: 56px; line-height: 56px; background-color: transparent; z-index: 19;"
        />
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header ant-pro-layout-header-mix ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-global-header"
          >
            <span
              class="ant-pro-global-header-collapsed-button"
            >
              <span
                aria-label="menu"
                class="anticon anticon-menu"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="menu"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            <div
              style="flex: 1;"
            />
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header"
        >
          welcome
        </main>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mobile BasicLayout > 📱 layout=mix 1`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-xs ant-pro-layout-fix-siderbar ant-pro-layout-mix"
  >
    <div
      class="ant-pro-layout-bg-list"
    />
    <div
      class="ant-layout ant-layout-has-sider"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-drawer ant-drawer-left ant-drawer-open ant-drawer-inline"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          aria-hidden="true"
          data-sentinel="start"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="width: 215px;"
        >
          <div
            aria-modal="true"
            class="ant-drawer-content ant-pro-drawer-sider"
            role="dialog"
            style="padding: 0px; height: 100vh;"
          >
            <div
              class="ant-drawer-body"
              style="height: 100vh; padding: 0px; display: flex; flex-direction: row; background-color: transparent;"
            >
              <aside
                class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-fixed ant-pro-sider-light"
                style="flex: 0 0 215px; max-width: 215px; min-width: 215px; width: 215px;"
              >
                <div
                  class="ant-layout-sider-children"
                >
                  <div
                    style="flex: 1; overflow-y: auto; overflow-x: hidden;"
                  >
                    <ul
                      class="ant-menu ant-menu-root ant-menu-inline ant-menu-light ant-pro-sider-menu ant-pro-base-menu-inline"
                      data-menu-list="true"
                      role="menu"
                      style="background-color: transparent; width: 100%;"
                      tabindex="0"
                    >
                      <li
                        class="ant-menu-submenu ant-menu-submenu-inline ant-pro-base-menu-inline-submenu ant-menu-submenu-open ant-menu-submenu-selected"
                        role="none"
                      >
                        <div
                          aria-controls="rc-menu-uuid-84044-2-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46-popup"
                          aria-expanded="true"
                          aria-haspopup="true"
                          class="ant-menu-submenu-title"
                          data-menu-id="rc-menu-uuid-84044-2-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46"
                          role="menuitem"
                          style="padding-left: 16px;"
                          tabindex="-1"
                        >
                          <span
                            class="ant-menu-title-content"
                          >
                            <div
                              class="ant-pro-base-menu-inline-item-title"
                            >
                              <span
                                class="ant-pro-base-menu-inline-item-text"
                              >
                                welcome
                              </span>
                            </div>
                          </span>
                          <i
                            class="ant-menu-submenu-arrow"
                          />
                        </div>
                        <ul
                          class="ant-menu ant-menu-sub ant-menu-inline"
                          data-menu-list="true"
                          id="rc-menu-uuid-84044-2-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46-popup"
                          role="menu"
                        >
                          <li
                            class="ant-menu-submenu ant-menu-submenu-inline ant-pro-base-menu-inline-submenu"
                            role="none"
                          >
                            <div
                              aria-controls="rc-menu-uuid-84044-2-/welcome-popup"
                              aria-expanded="false"
                              aria-haspopup="true"
                              class="ant-menu-submenu-title"
                              data-menu-id="rc-menu-uuid-84044-2-/welcome"
                              role="menuitem"
                              style="padding-left: 32px;"
                              tabindex="-1"
                            >
                              <span
                                class="ant-menu-title-content"
                              >
                                <div
                                  class="ant-pro-base-menu-inline-item-title"
                                >
                                  <span
                                    class="ant-pro-base-menu-inline-item-text"
                                  >
                                    one
                                  </span>
                                </div>
                              </span>
                              <i
                                class="ant-menu-submenu-arrow"
                              />
                            </div>
                          </li>
                        </ul>
                      </li>
                    </ul>
                    <div
                      aria-hidden="true"
                      style="display: none;"
                    />
                  </div>
                  <div
                    class="ant-pro-sider-collapsed-button ant-pro-sider-collapsed-button-is-mobile"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 12 12"
                      width="1em"
                    >
                      <path
                        d="M6.432 7.967a.448.448 0 01-.318.133h-.228a.46.46 0 01-.318-.133L2.488 4.85a.305.305 0 010-.43l.427-.43a.293.293 0 01.42 0L6 6.687l2.665-2.699a.299.299 0 01.426 0l.42.431a.305.305 0 010 .43L6.432 7.967z"
                      />
                    </svg>
                  </div>
                </div>
              </aside>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          data-sentinel="end"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
      </div>
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header"
          style="height: 56px; line-height: 56px; background-color: transparent; z-index: 19;"
        />
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header ant-pro-layout-header-mix ant-pro-layout-header-fixed-header-action ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-global-header"
          >
            <span
              class="ant-pro-global-header-collapsed-button"
            >
              <span
                aria-label="menu"
                class="anticon anticon-menu"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="menu"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-pro-global-header-logo ant-pro-global-header-logo-mix ant-pro-global-header-logo-mobile"
            >
              <a>
                <svg
                  height="1em"
                  viewBox="0 0 200 200"
                  width="1em"
                >
                  <defs>
                    <lineargradient
                      id="linearGradient-1"
                      x1="62.1023273%"
                      x2="108.19718%"
                      y1="0%"
                      y2="37.8635764%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#4285EB"
                      />
                      <stop
                        offset="100%"
                        stop-color="#2EC7FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-2"
                      x1="69.644116%"
                      x2="54.0428975%"
                      y1="0%"
                      y2="108.456714%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#29CDFF"
                      />
                      <stop
                        offset="37.8600687%"
                        stop-color="#148EFF"
                      />
                      <stop
                        offset="100%"
                        stop-color="#0A60FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-3"
                      x1="69.6908165%"
                      x2="16.7228981%"
                      y1="-12.9743587%"
                      y2="117.391248%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA816E"
                      />
                      <stop
                        offset="41.472606%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-4"
                      x1="68.1279872%"
                      x2="30.4400914%"
                      y1="-35.6905737%"
                      y2="114.942679%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA8E7D"
                      />
                      <stop
                        offset="51.2635191%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                  </defs>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      transform="translate(-20.000000, -20.000000)"
                    >
                      <g
                        transform="translate(20.000000, 20.000000)"
                      >
                        <g>
                          <g
                            fill-rule="nonzero"
                          >
                            <g>
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C99.2571609,26.9692191 101.032305,26.9692191 102.20193,28.1378823 L129.985225,55.8983314 C134.193707,60.1033528 141.017005,60.1033528 145.225487,55.8983314 C149.433969,51.69331 149.433969,44.8756232 145.225487,40.6706018 L108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-1)"
                              />
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C100.999864,25.6271836 105.751642,20.541824 112.729652,19.3524487 C117.915585,18.4685261 123.585219,20.4140239 129.738554,25.1889424 C125.624663,21.0784292 118.571995,14.0340304 108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-2)"
                              />
                            </g>
                            <path
                              d="M153.685633,135.854579 C157.894115,140.0596 164.717412,140.0596 168.925894,135.854579 L195.959977,108.842726 C200.659183,104.147384 200.659183,96.5636133 195.960527,91.8688194 L168.690777,64.7181159 C164.472332,60.5180858 157.646868,60.5241425 153.435895,64.7316526 C149.227413,68.936674 149.227413,75.7543607 153.435895,79.9593821 L171.854035,98.3623765 C173.02366,99.5310396 173.02366,101.304724 171.854035,102.473387 L153.685633,120.626849 C149.47715,124.83187 149.47715,131.649557 153.685633,135.854579 Z"
                              fill="url(#linearGradient-3)"
                            />
                          </g>
                          <ellipse
                            cx="100.519339"
                            cy="100.436681"
                            fill="url(#linearGradient-4)"
                            rx="23.6001926"
                            ry="23.580786"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </a>
            </span>
            <div
              style="flex: 1;"
            />
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`mobile BasicLayout > 📱 layout=mix and splitMenus 1`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-xs ant-pro-layout-fix-siderbar ant-pro-layout-mix"
  >
    <div
      class="ant-pro-layout-bg-list"
    />
    <div
      class="ant-layout ant-layout-has-sider"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-drawer ant-drawer-left ant-drawer-open ant-drawer-inline"
        tabindex="-1"
      >
        <div
          class="ant-drawer-mask"
        />
        <div
          aria-hidden="true"
          data-sentinel="start"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
        <div
          class="ant-drawer-content-wrapper"
          style="width: 215px;"
        >
          <div
            aria-modal="true"
            class="ant-drawer-content ant-pro-drawer-sider"
            role="dialog"
            style="padding: 0px; height: 100vh;"
          >
            <div
              class="ant-drawer-body"
              style="height: 100vh; padding: 0px; display: flex; flex-direction: row; background-color: transparent;"
            >
              <aside
                class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-fixed ant-pro-sider-light"
                style="flex: 0 0 215px; max-width: 215px; min-width: 215px; width: 215px;"
              >
                <div
                  class="ant-layout-sider-children"
                >
                  <div
                    style="flex: 1; overflow-y: auto; overflow-x: hidden;"
                  >
                    <ul
                      class="ant-menu ant-menu-root ant-menu-inline ant-menu-light ant-pro-sider-menu ant-pro-base-menu-inline"
                      data-menu-list="true"
                      role="menu"
                      style="background-color: transparent; width: 100%;"
                      tabindex="0"
                    >
                      <li
                        class="ant-menu-submenu ant-menu-submenu-inline ant-pro-base-menu-inline-submenu ant-menu-submenu-open ant-menu-submenu-selected"
                        role="none"
                      >
                        <div
                          aria-controls="rc-menu-uuid-84044-3-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46-popup"
                          aria-expanded="true"
                          aria-haspopup="true"
                          class="ant-menu-submenu-title"
                          data-menu-id="rc-menu-uuid-84044-3-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46"
                          role="menuitem"
                          style="padding-left: 16px;"
                          tabindex="-1"
                        >
                          <span
                            class="ant-menu-title-content"
                          >
                            <div
                              class="ant-pro-base-menu-inline-item-title"
                            >
                              <span
                                class="ant-pro-base-menu-inline-item-text"
                              >
                                welcome
                              </span>
                            </div>
                          </span>
                          <i
                            class="ant-menu-submenu-arrow"
                          />
                        </div>
                        <ul
                          class="ant-menu ant-menu-sub ant-menu-inline"
                          data-menu-list="true"
                          id="rc-menu-uuid-84044-3-/e6588ef55196e07dc333fd4ea6f17be36f1337c871c6991386e7814897305d46-popup"
                          role="menu"
                        >
                          <li
                            class="ant-menu-submenu ant-menu-submenu-inline ant-pro-base-menu-inline-submenu"
                            role="none"
                          >
                            <div
                              aria-controls="rc-menu-uuid-84044-3-/welcome-popup"
                              aria-expanded="false"
                              aria-haspopup="true"
                              class="ant-menu-submenu-title"
                              data-menu-id="rc-menu-uuid-84044-3-/welcome"
                              role="menuitem"
                              style="padding-left: 32px;"
                              tabindex="-1"
                            >
                              <span
                                class="ant-menu-title-content"
                              >
                                <div
                                  class="ant-pro-base-menu-inline-item-title"
                                >
                                  <span
                                    class="ant-pro-base-menu-inline-item-text"
                                  >
                                    one
                                  </span>
                                </div>
                              </span>
                              <i
                                class="ant-menu-submenu-arrow"
                              />
                            </div>
                          </li>
                        </ul>
                      </li>
                    </ul>
                    <div
                      aria-hidden="true"
                      style="display: none;"
                    />
                  </div>
                  <div
                    class="ant-pro-sider-collapsed-button ant-pro-sider-collapsed-button-is-mobile"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 12 12"
                      width="1em"
                    >
                      <path
                        d="M6.432 7.967a.448.448 0 01-.318.133h-.228a.46.46 0 01-.318-.133L2.488 4.85a.305.305 0 010-.43l.427-.43a.293.293 0 01.42 0L6 6.687l2.665-2.699a.299.299 0 01.426 0l.42.431a.305.305 0 010 .43L6.432 7.967z"
                      />
                    </svg>
                  </div>
                </div>
              </aside>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          data-sentinel="end"
          style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
          tabindex="0"
        />
      </div>
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header"
          style="height: 56px; line-height: 56px; background-color: transparent; z-index: 19;"
        />
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header ant-pro-layout-header-mix ant-pro-layout-header-fixed-header-action ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-global-header"
          >
            <span
              class="ant-pro-global-header-collapsed-button"
            >
              <span
                aria-label="menu"
                class="anticon anticon-menu"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="menu"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-pro-global-header-logo ant-pro-global-header-logo-mix ant-pro-global-header-logo-mobile"
            >
              <a>
                <svg
                  height="1em"
                  viewBox="0 0 200 200"
                  width="1em"
                >
                  <defs>
                    <lineargradient
                      id="linearGradient-1"
                      x1="62.1023273%"
                      x2="108.19718%"
                      y1="0%"
                      y2="37.8635764%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#4285EB"
                      />
                      <stop
                        offset="100%"
                        stop-color="#2EC7FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-2"
                      x1="69.644116%"
                      x2="54.0428975%"
                      y1="0%"
                      y2="108.456714%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#29CDFF"
                      />
                      <stop
                        offset="37.8600687%"
                        stop-color="#148EFF"
                      />
                      <stop
                        offset="100%"
                        stop-color="#0A60FF"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-3"
                      x1="69.6908165%"
                      x2="16.7228981%"
                      y1="-12.9743587%"
                      y2="117.391248%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA816E"
                      />
                      <stop
                        offset="41.472606%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                    <lineargradient
                      id="linearGradient-4"
                      x1="68.1279872%"
                      x2="30.4400914%"
                      y1="-35.6905737%"
                      y2="114.942679%"
                    >
                      <stop
                        offset="0%"
                        stop-color="#FA8E7D"
                      />
                      <stop
                        offset="51.2635191%"
                        stop-color="#F74A5C"
                      />
                      <stop
                        offset="100%"
                        stop-color="#F51D2C"
                      />
                    </lineargradient>
                  </defs>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      transform="translate(-20.000000, -20.000000)"
                    >
                      <g
                        transform="translate(20.000000, 20.000000)"
                      >
                        <g>
                          <g
                            fill-rule="nonzero"
                          >
                            <g>
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C99.2571609,26.9692191 101.032305,26.9692191 102.20193,28.1378823 L129.985225,55.8983314 C134.193707,60.1033528 141.017005,60.1033528 145.225487,55.8983314 C149.433969,51.69331 149.433969,44.8756232 145.225487,40.6706018 L108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-1)"
                              />
                              <path
                                d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C100.999864,25.6271836 105.751642,20.541824 112.729652,19.3524487 C117.915585,18.4685261 123.585219,20.4140239 129.738554,25.1889424 C125.624663,21.0784292 118.571995,14.0340304 108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                fill="url(#linearGradient-2)"
                              />
                            </g>
                            <path
                              d="M153.685633,135.854579 C157.894115,140.0596 164.717412,140.0596 168.925894,135.854579 L195.959977,108.842726 C200.659183,104.147384 200.659183,96.5636133 195.960527,91.8688194 L168.690777,64.7181159 C164.472332,60.5180858 157.646868,60.5241425 153.435895,64.7316526 C149.227413,68.936674 149.227413,75.7543607 153.435895,79.9593821 L171.854035,98.3623765 C173.02366,99.5310396 173.02366,101.304724 171.854035,102.473387 L153.685633,120.626849 C149.47715,124.83187 149.47715,131.649557 153.685633,135.854579 Z"
                              fill="url(#linearGradient-3)"
                            />
                          </g>
                          <ellipse
                            cx="100.519339"
                            cy="100.436681"
                            fill="url(#linearGradient-4)"
                            rx="23.6001926"
                            ry="23.580786"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </a>
            </span>
            <div
              style="flex: 1;"
            />
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
